# hydraroach

./: .gitignore  CMakeLists.txt  README.md
proto/: CMakeLists.txt  message.proto
src/: .clang-format  WORKSPACE
src/hydraroach/client/: BUILD  external_client.cpp  external_client.hpp  externalclient.cpp
src/hydraroach/event/: BUILD  event.cpp  event.hpp  event_handler.hpp  event_queue.cpp  event_queue.hpp
src/hydraroach/external_service/: BUILD  externalservice.cpp
src/hydraroach/external_service/client/: externalclient.hpp
src/hydraroach/hydraroach_service/: BUILD  hydraroachservice.cpp  hydraroachservice.hpp  main.cpp
src/hydraroach/hydraroach_service/replay_publish/: BUILD  replaypublisher.hpp
src/hydraroach/main/: BUILD  main.cpp
src/hydraroach/proto/: BUILD  greeter.proto  hydraroach.proto
src/hydraroach/replay/: BUILD  find_replay.cpp  find_replay.hpp  hash_replay.cpp  hash_replay.hpp
src/hydraroach/replay_publish/: replaypublisher.cpp
src/hydraroach/sc2_watcher/: BUILD  sc2_watcher.cpp  sc2_watcher.hpp  sc2_watcher_subscriber.hpp
src/hydraroach/service/main/: BUILD  main.cpp
src/hydraroach/simple_client/: BUILD  simple_client_main.cpp
src/hydraroach/test_client/: BUILD  main.cpp
